# HPVMx

./: .gitattributes  .gitignore  .output.txt  Cargo.toml  INSTALL-PHY.PS1  INSTALL.PS1  README.md  build.bat  build.rs  diskpart.txt  doc  excludes.txt  font_editor.html  hpvmx.md  pandocx.ps1  plan.txt  qemu-start.ps1  shell.efi  vars.fd
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml
doc/: development.md  manual.md
editor/: definitions.xml  editor.py  font_editor_uc.html  ico_editor.html  package_ui.rs  sym_editor.html
editor/rust/: package_ui_test.rs
editor/ui-edit-desktop/: cargo.toml  pixel_designer_export.rs  pixel_designer_export.xml
editor/ui-edit-desktop/src/: main.rs
editor/xml/: packages_ui.xml
internal/features/: features.prg
internal/features/xmlui/: feature.json
internal/features/xmlui/core/: default-config.xml  pg.defs.xml
internal/pm/package/: registry.prg
internal/pm/package/test-package/: entry.json
src/: binary_loader.rs  c_stems.rs  consts.rs  cpucheck.rs  deprecated.rs  env.rs  filesystem.rs  gdt.rs  graphics.rs  hpvmlog.rs  imx.rs  input.rs  interrupts.rs  kernel.rs  loader.rs  logiclang_int.rs  main.rs  page.rs  paging.rs  pe.rs  registry.rs  rng.rs  state.rs  terminal.rs  tools.rs  types.rs  ui.rs
src/apps/: appinstaller.rs  browser.rs  clock.rs  cube.rs  doom.rs  doom_glue.rs  keystepper.rs  manual.rs  mc_app.rs  micro_ide.rs  mod.rs  netman.rs  resource_tester.rs  simple_app.rs  snake.rs  vm_console.rs
src/apps/core/: error.rs
src/apps/doom_c/: doomgeneric.c  doomgeneric.h
src/devices/: mod.rs  net.rs  net_hw.rs  net_stack.rs  timer.rs
src/dls/: mod.rs
src/hardware/: cpu.rs  mod.rs  pci.rs  vmx.rs
src/hardware/cpu/: vmx.rs
src/logiclang_int/: builtins.rs  error.rs  interpreter.rs  lexer.rs  parser.rs
src/micro_c/: ast.rs  codegen_ir.rs  commands.rs  compiler.rs  emitter.rs  error.rs  fs.rs  interpreter.rs  ir.rs  lexer.rs  mod.rs  parser.rs  regalloc.rs  stackframe.rs
src/micro_c/arch/: arm64.rs  mod.rs  win64.rs  x86_64_raw.rs
src/pm/: commands.rs  manager.rs  mod.rs
src/tools/: dsk.rs
src/ui/: graphics.rs  graphics3d.rs  pixel_graphics.rs
src/vmm/: bootloader.rs  ghm.rs  hwbus.rs  io.rs  mapper.rs  memory.rs  mod.rs  partitioner.rs  security.rs  storage.rs  vcpu.rs  vm.rs  vmbus.rs  vmm.rs
web/: index.html
(+1 files in other folders)
