[package]
name = "HPVMx"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "HPVMx"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.15.4"
raw-cpuid = "11.6.0"
spinning = "0.1.0"
buddy_system_allocator = "0.12.0"
uefi = { version = "0.36.1", features = ["alloc", "logger", "panic_handler", "unstable", "default", "global_allocator"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "medium-ip", "socket-raw"] }
virtio-drivers = "0.12.0"
# ixgbe/e1000 drivers needed
gpt = "4.1.0"
log = "0.4.29"
lazy_static = "1.5.0"
uefi-raw = "0.13.0"
# Hypervisor dependencies
bitflags = "2.4.0"
bytemuck = "1.14.0"
uefi-async = "0.2.8"