[package]
name = "HPVMx"
version = "0.8.9"
edition = "2024"

[[bin]]
name = "HPVMx"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.15.4"
raw-cpuid = "11.6.0"
spinning = "0.1.0"
buddy_system_allocator = "0.12.0"
uefi = { version = "0.36.1", features = ["alloc", "logger", "panic_handler", "unstable", "default", "global_allocator"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "medium-ip", "socket-raw"] }
# ixgbe/e1000 drivers needed
log = "0.4.29"
uefi-raw = "0.13.0"
# Hypervisor dependencies
bitflags = "2.4.0"
uefi-async = "0.2.8"