[package]
name = "HPVMx"
version = "1.3.14"
edition = "2024"

[[bin]]
name = "HPVMx"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"



[dependencies]
x86_64 = "0.15.4"
raw-cpuid = "11.6.0"
buddy_system_allocator = "0.12.0"
uefi = { version = "0.36.1", features = ["alloc", "logger", "panic_handler", "unstable", "default", "global_allocator"] }
# smoltcp = { version = "0.13.0", default-features = false, features = ["proto-ipv4", "medium-ip", "socket-raw"] }
# ixgbe/e1000 drivers needed
log = "0.4.29"
uefi-raw = "0.13.0"
# Hypervisor dependencies
bitflags = "2.4.0"
elf = { version = "0.8.0", default-features = false }

# Other
libm = "0.2.16"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.5.0"
hashbrown = "0.17.0"
